care-australia-uat/force-app/main/default/objects/Loan_Update__c/Loan_Update__c.object-meta.xml
<CustomObject>
    <description>Content for Our Impact Section</description>
    <label>Loan Update</label>
    <nameField>
        <displayFormat>LU-{00000}</displayFormat>
        <label>Loan Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>