care-australia-uat/force-app/main/default/objects/Loan_Update__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>