care-australia-uat/force-app/main/default/objects/Loan_Update__c/fields/Loan_Update_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Loan_Update_Sequence__c</fullName>
    <label>Loan Update Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>