care-australia-uat/force-app/main/default/objects/Loan_Update__c/fields/Published_Status__c.field-meta.xml
<CustomField>
    <fullName>Published_Status__c</fullName>
    <label>Published Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>